--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
+    "sql.js": "^1.13.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
